background img was changed and container-can moved to the bottom of page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
+body{
+    background-image: url(../img/grass.jpg);
+    background-size:cover;
+}
+
+.container-can{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-top: 20px;
+    padding: 5px;
+    font-size:15px;
+}
 .container-can,
 .container-trash {
   display: flex;
   justify-content: space-between;
-  
+
 }
 .pCan,
 .eCan,
