--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
+html{
+  width: 100%;
+  height: 100%;
+}
+
 body{
     background-image: url(../img/grass.jpg);
     background-size:cover;
-}
+    width: 100%;
+    height: 100%;
+    margin: 0;
 
+}
+.container{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  bottom: 10;
+  left: 0
+}
+.container-trash{
+  position: absolute;
+  right: 0;
+  bottom: 10;
+  left: 0;
+  
+}
 .container-can{
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
-    margin-top: 20px;
-    padding: 5px;
-    font-size:15px;
 }
-.container-can,
-.container-trash {
+
+.container-trash,
+.container-can {
   display: flex;
   justify-content: space-between;
-
+  flex-wrap: wrap;
+}
+div{
+  margin-left: 20px;
+ 
+  
 }
 .pCan,
 .eCan,
@@ -63,6 +90,7 @@ body{
   background-size: 50px 50px;
   width: 50px;
   height: 50px;
+
 }
 
 .ew {
